[metadata]
name = playground-unexport
version = attr: playground_unexport.__version__
url = https://playground-unexport.hakancelik.dev/
author = Hakan Çelik
author_email = contact@hakancelik.dev
description = attr: playground_unexport.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
keywords = 
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://playground-unexport.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/playground-unexport/issues/
    Changelog = https://playground-unexport.hakancelik.dev/changelog

[options]
python_requires = >=3.8
include_package_data = true
zip_safe = true
packages =
    playground_unexport
package_dir =
    =src
install_requires =
    unexport
    panel==0.14.0
